--- a/webstyle.css
+++ b/webstyle.css
@@ -42,7 +42,7 @@ h1{
   width: 700px;
 }
 #showcase{
-  background-image: url(https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3f1d38bbdda690e28a81673c06325075&auto=format&fit=crop&w=1489&q=80);
+  background-image: url(marketing.jpg);
   height: 80vh;
   background-size: cover;
   background-position: center;
@@ -116,7 +116,7 @@ h1{
 
 }
 #showcase{
-  background-image: url(https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3f1d38bbdda690e28a81673c06325075&auto=format&fit=crop&w=1489&q=80);
+  background-image: url(marketing.jpg);
   height: 80vh;
   background-size: cover;
   background-position: center;
